<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="d1">DEMO 1 - SIMPLE DIALOG</string>
    <string name="d2">DEMO 2 BUTTONS DIALOG</string>
    <string name="d3">DEMO 3 TEXT INPUT DIALOG</string>
    <string name="enter">Enter Some Text</string>
    <string name="d4">EXERCISE 3</string>
    <string name="d5">DEMO 4 DATEPICKER DIALOG</string>
    <string name="d6">DEMO 5 TIMEPICKER DIALOG</string>
</resources>
